# FED

./: .editorconfig  .env  .gitignore  iPython.ipynb  main.py  pyproject.toml
Parser/: WantedParser.py
fed_backend/: main.py  test.py
fed_backend/libs/: cleanser.py  db_interface.py  id_generator.py  models.py  parser.py  schemas.py
libs/: WantedCleanser.py  WantedIdGenerator.py  WantedParser.py  cleanser.py  crud.py  database.py  db_interface.py  id_generator.py  parser.py
